--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "geopandas>=1.0.1",
+    "geopy>=2.4.1",
     "ipykernel>=6.29.5",
     "matplotlib>=3.10.3",
     "pandas>=2.2.3",
     "pyarrow>=20.0.0",
+    "pycountry>=24.6.1",
     "requests>=2.32.3",
 ]
